--- a/Example/SwiftDog/Base.lproj/Main.storyboard
+++ b/Example/SwiftDog/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -61,9 +62,21 @@
                                     <constraint firstAttribute="width" constant="256" id="phH-od-huS"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5BJ-MC-SA8">
+                                <rect key="frame" x="209" y="617" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="UXG-ik-FnL"/>
+                                    <constraint firstAttribute="width" constant="150" id="pb9-jN-uGm"/>
+                                </constraints>
+                                <state key="normal" title="Reset Credentials"/>
+                                <connections>
+                                    <action selector="resetCredentials:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="nWW-sl-g2n"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="5BJ-MC-SA8" secondAttribute="bottom" constant="20" id="ASk-mj-RoF"/>
                             <constraint firstItem="kbJ-P2-IZm" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="Tw8-HQ-5iC"/>
                             <constraint firstItem="13J-hr-fGE" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="VpN-3L-Kuv"/>
                             <constraint firstItem="idm-yg-6dw" firstAttribute="top" secondItem="nK0-j8-nkC" secondAttribute="bottom" constant="30" id="akx-XQ-8Xb"/>
@@ -74,6 +87,7 @@
                             <constraint firstItem="ZZe-3e-ks1" firstAttribute="top" secondItem="kbJ-P2-IZm" secondAttribute="bottom" constant="30" id="j0v-AH-UWO"/>
                             <constraint firstItem="F4R-wl-GZm" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="lqK-fc-BUD"/>
                             <constraint firstItem="F4R-wl-GZm" firstAttribute="top" secondItem="13J-hr-fGE" secondAttribute="bottom" constant="30" id="lyq-km-zK5"/>
+                            <constraint firstItem="5BJ-MC-SA8" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="oH7-5k-rNf"/>
                             <constraint firstItem="kbJ-P2-IZm" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="pPo-t4-dma"/>
                             <constraint firstItem="ZZe-3e-ks1" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="zIZ-8D-Qrd"/>
                         </constraints>
